fixing astronaut spacing issue, continuing styling for astronauts

--- a/public/main.css
+++ b/public/main.css
@@ -15,18 +15,22 @@ html {
 }
 
 #sign-up {
-    color: black;
+    color: white;
+    background-color: rgb(25, 105, 141);
+    border: 1px solid rgb(25, 105, 141);
     text-decoration: none;
     margin: 20px;
     padding: 10px;
-    border-radius: 3px;
     position: absolute;
     top: 0;
     right: 0;
 }
 
 #sign-up:hover {
-    background-color: rgb(218, 218, 218);
+    color: black;
+    background-color: white;
+    border: 1px solid rgb(25, 105, 141);
+    transition: 0.3s;
 }
 
 .centered-form-content {
@@ -98,12 +102,12 @@ html {
     flex: 0 0 25%;
     margin: 1%;
     padding: 10px;
-    background-color: rgb(238, 238, 238);
+    background-color: rgb(247, 247, 247);
     text-align: center;
 }
 
 .astronaut-title {
-    font-weight: 800;
+    font-weight: 600;
 }
 
 .astronaut-photo {
@@ -127,11 +131,11 @@ html {
     color: inherit;
     margin-right: 20px;
     padding: 10px;
-    border-radius: 3px;
 }
 
 .add-astro:hover {
-    background-color: rgb(218, 218, 218);
+    color: #198d78;
+    text-decoration: underline;
 }
 
 /* add astronaut page */
@@ -143,19 +147,19 @@ html {
 /* single astronaut page */
 .single-astronaut-container {
     padding: 20px;
+    background-color: rgb(247, 247, 247);
 }
 
 .single-astro-back {
     text-decoration: none;
-    color: inherit;
-    margin-left: 20px;
-    padding-right: 10px;
-    padding-left: 10px;
+    color: black;
+    transition: 0.3s;
+    font-size: 30px;
+    font-weight: 100;
 }
 
 .single-astro-back:hover {
-    background-color: rgb(218, 218, 218);
-    border-radius: 50%;
+    color: #198d78;
 }
 
 .single-astro-list {
